@@ -2,7 +2,8 @@
 
 2006-11-23:
     - kBuild/header.kmk, kmk:
-        o Proper versioning.
+        o #6: Did code changes for unix installation. Will do install goals when creating the gentoo ebuild.
+        o #5: Proper versioning. (#5)
     - kmk:
         o Support SDK.$(BUILD_TARGET_ARCH) too (only bug).
         o Fixed a bug when gather SDKs.
